fixed alignment issues in navbar header

--- a/src/main/resources/public/css/style_2.css
+++ b/src/main/resources/public/css/style_2.css
@@ -170,15 +170,6 @@ table.dataTable tbody th, table.dataTable tbody td {
 
 .feedbackModal {
 	top: 10%;
-	right: 0%;
-	bottom: 0%;
-	left: 36%;
-	z-index: 10040;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	overflow: hidden; width : 30%;
-	height: 100%;
-	width: 30%;
 }
 
 body.modal-open {
@@ -245,15 +236,7 @@ hr {
 
 .changeLogModal {
 	top: 10%;
-	right: 0%;
-	bottom: 0%;
-	left: 36%;
-	z-index: 10040;
-	overflow-x: hidden;
-	overflow-y: hidden;
-	overflow: hidden;
-	width: 30%;
-	height: 100%;
+
 }
 
 .alignChangelogModalText {
